src/tests/parser/stmt_parser/snapshots/kasl__tests__parser__stmt_parser__op_parser__parse_infix_def_right.snap
---
source: src/tests/parser/stmt_parser/op_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 57,
        },
        kind: InfixDefine {
            symbol: "%",
            props: InfixOperatorProperties {
                precedence: 60,
                associativity: Right,
                range: Range {
                    start: 19,
                    end: 55,
                },
            },
        },
    },
]
