src/tests/parser/stmt_parser/snapshots/kasl__tests__parser__stmt_parser__op_parser__parse_postfix_func.snap
---
source: src/tests/parser/stmt_parser/op_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 40,
        },
        kind: OperatorFunc {
            op_type: Postfix,
            symbol: "!",
            params: [
                ParserFuncParam {
                    label: Some(
                        "_",
                    ),
                    name: "operand",
                    value_type: Some(
                        SymbolPath {
                            components: [
                                SymbolPathComponent {
                                    symbol: "Int",
                                },
                            ],
                        },
                    ),
                    def_val: None,
                    range: Range {
                        start: 15,
                        end: 29,
                    },
                },
            ],
            return_type: SymbolPath {
                components: [
                    SymbolPathComponent {
                        symbol: "Int",
                    },
                ],
            },
            body: [],
        },
    },
]
